# Ohoo

./: .gitignore  BUILD_INSTRUCTIONS.md  DEV_GUIDE.md  ICON_REPLACEMENT_GUIDE.md  ICON_UPDATE_GUIDE.md  README.md  advanced_icon_generator.py  build_and_package.sh  build_app_only.sh  build_debug.sh  build_release.sh  generate_icon.py  generate_icon_from_image.py  index.html  package-lock.json  package.json  quick_build.sh  test_nuitka_only.sh  update_icon.py
python-service/: build.py  build_executable.py  build_nuitka.py  demo_onnx.py  download_complete_models.py  english_itn.py  japanese_itn.py  multilingual_itn.py  perform.py  performance_test.py  requirements-nuitka.txt  requirements.txt  sense_voice_server.spec.backup  server.py  start_server.sh  test_nuitka_build.py
src/: App copy.jsx  App.jsx  main.jsx  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.conf.json.bak
src-tauri/icons/: icon.icns
src-tauri/src/: audio_manager.rs  main.rs  main.rs.cloud_backup  server_manager.rs
