[package]
name = "ohoo"
version = "1.0.0"
description = "A voice transcription desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = [ "macos-private-api", "window-unmaximize", "window-start-dragging", "window-maximize", "window-minimize", "window-hide", "window-show", "window-close", "window-unminimize", "http-all", "devtools"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
regex = "1.11"
# 音频相关依赖
cpal = "0.15"
ringbuf = "0.3"
hound = "3.5"
once_cell = "1.19"
# 高质量重采样库
rubato = "0.14"
# 窗口阴影控制
window-shadows = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
